Slide subtitles up when controlbar shows to avoid overlap

--- a/src/scss/skin-modern/components/_subtitleoverlay.scss
+++ b/src/scss/skin-modern/components/_subtitleoverlay.scss
@@ -25,6 +25,7 @@
     position: absolute;
     right: 3em;
     text-align: center;
+    transition: bottom $animation-duration / 2 ease-out;
 
     // Shift shadow in all 8 directions to get a homogeneous stroke around the text (works only for 1px width)
     text-shadow: -1px -1px 0 $subtitle-text-border-color,
@@ -35,5 +36,12 @@
     -1px 1px 0 $subtitle-text-border-color,
     0 1px 0 $subtitle-text-border-color,
     1px 1px 0 $subtitle-text-border-color;
+  }
+
+  &.controlbar-visible {
+    .ui-subtitle-label {
+      bottom: 5em;
+      transition: bottom $animation-duration / 2 ease-in;
+    }
   }
 }
